# caron18-gia

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: container.yaml
modules/caron18/GIA/: caron18_GIA_postprocess.py  pipeline.yml
src/caron18_gia/: __init__.py  caron18_GIA_postprocess.py  caron18_GIA_preprocess.py  cli.py
